--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,34 @@
   text-align: center;
 }
 
-.heading {
+.wrapper {
+	width: 960px;
+	margin: 0 auto 0 auto;	
+}
+
+.left-box {
+	width: 650px;
 	float: left;
 }
 
+.right-box {
+	width: 270px;
+	float: right;
+}
+
+.heading {
+	position: absolute;
+	
+}
+
 .sidebar {
+}
+
+.profile-img {
 	float: left;
+}
+
+.social-network {
+	float: right;
+	width: 33.3%;
 }
