--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,13 +23,18 @@ h1 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	text-align: left;
 	font-size: 20px;
-	padding-bottom: 15px;
+	padding-bottom: 20px;
+	color: #4aaaa5;
+	font-weight: bold;
 }
 
 h2 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 18px;
 	padding-bottom: 5px;
+	padding-top: 10px;
+	color: #4aaaa5;
+	font-weight: bold;
 }
 
 a{
@@ -44,12 +49,13 @@ a{
 	height: 70px;
 	background-color: #ffffff;
 	z-index: -1;
+	border-bottom: groove 3px #dddddd;
 }
 
 .wrapper {
 	width: 960px;
 	margin: 0 auto 0 auto;	
-	min-height: 1300px;
+	min-height: 1500px;
 	top:0;
 }
 
@@ -64,12 +70,13 @@ a{
 	background-color: #4aaaa5;
 	height: 100%;
 	width: 200px;
-	padding-top: 30px;
+	padding-top: 24px;
 	text-align: center;
 	margin: 0 auto;
 	color: white;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 20px;
+	font-weight: bold;
 }
 
 .sidebar {
@@ -87,7 +94,7 @@ a{
 .left-box {
 	width: 650px;
 	float: left;
-	border: groove 1px #dddddd;
+	border: groove 3px #dddddd;
 	background-color: #ffffff;
 	padding: 30px;
 }
@@ -95,7 +102,7 @@ a{
 .right-box {
 	width: 270px;
 	float: right;
-	border: groove 1px #dddddd;
+	border: groove 3px #dddddd;
 	background-color: #ffffff;
 	padding: 10px;
 }
