--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,11 +37,27 @@ h2 {
 	font-weight: bold;
 }
 
-a{
+h3 {
+	text-align: left;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+}
+
+a {
 	color:#7777777;
 	text-decoration: none;	
 	font-family: 'Georgia', Times, Times New Roman, serif;
 }
+
+textarea {
+	text-align: left;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	color: #777777;
+}
+
 
 .topline-background {
 	position: absolute;
@@ -135,4 +151,21 @@ a{
 
 .profile-img {
 	padding-right: 20px;
+}
+
+.fill-in {
+	text-align: left;
+}
+
+.submit {
+	float: left;
+	height: 30px;
+	background-color: #4aaaa5;
+	color: #ffffff;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	padding-right: 20px;	
+	padding-left: 20px;
+	padding-top: 7px;
+	font-weight: bold;
+	margin-top: 8px;
 }
