--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,15 +26,18 @@ h1 {
 	padding-bottom: 20px;
 	color: #4aaaa5;
 	font-weight: bold;
+	border-bottom: groove 2px #dddddd;
+	margin-bottom: 30px;
 }
 
 h2 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 18px;
-	padding-bottom: 5px;
+	padding-bottom: 17px;
 	padding-top: 10px;
 	color: #4aaaa5;
 	font-weight: bold;
+	border-bottom: groove 2px #dddddd;
 }
 
 h3 {
@@ -62,7 +65,7 @@ textarea {
 .topline-background {
 	position: absolute;
 	width: 100%;
-	height: 70px;
+	height: 73px;
 	background-color: #ffffff;
 	z-index: -1;
 	border-bottom: groove 3px #dddddd;
@@ -106,6 +109,14 @@ textarea {
 	width: 33.3%;
 }
 
+.about, .portfolio, .contact {
+	color: #777777;
+}
+
+.portfolio {
+	border-right: groove 2px #dddddd;
+	border-left: groove 2px #dddddd;
+}
 
 .left-box {
 	width: 650px;
@@ -168,4 +179,24 @@ textarea {
 	padding-top: 7px;
 	font-weight: bold;
 	margin-top: 8px;
+}
+
+.project-link-odd {
+	float: left;
+}
+
+.project-link-even {
+	float: right;
+}
+
+.project-text {
+	position: absolute;
+	width: 280px;
+	height: 40px;
+	background-color: #4aaaa5;
+	margin-top: 90px;
+	padding-top: 12px;
+	color: #ffffff;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-weight: bold;
 }
